{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 276,
  "lineage": "afeab593-9354-f9e6-235d-dcfbcbac231a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.0.1.5",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-11-27T15:09:58.644-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/security-standards-group-4/regions/us-west1/addresses/l7-ilb-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "l7-ilb-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "security-standards-group-4",
            "purpose": "SHARED_LOADBALANCER_VIP",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/addresses/l7-ilb-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/subnetworks/l7-ilb-subnet",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/forwardingRules/l7-ilb-forwarding-rule"
            ]
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "frontend_lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.199.188.152",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-11-27T15:09:03.443-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/security-standards-group-4/regions/us-west1/addresses/frontend-lb-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "frontend-lb-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "security-standards-group-4",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/addresses/frontend-lb-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/forwardingRules/frontend-forwarding-rule"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_cluster_to_management",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-11-27T15:09:05.802-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "10.0.3.0/24"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/security-standards-group-4/global/firewalls/allow-cluster-to-management",
            "log_config": [],
            "name": "allow-cluster-to-management",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/cluster-network",
            "priority": 1000,
            "project": "security-standards-group-4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/firewalls/allow-cluster-to-management",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.cluster_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_management_to_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-27T15:09:58.962-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/security-standards-group-4/global/firewalls/allow-management-to-cluster",
            "log_config": [],
            "name": "allow-management-to-cluster",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/cluster-network",
            "priority": 1000,
            "project": "security-standards-group-4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/firewalls/allow-management-to-cluster",
            "source_ranges": [
              "10.0.3.2"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.management_instance",
            "google_compute_network.cluster_network",
            "google_compute_network.management_vpc",
            "google_compute_subnetwork.management_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_from_management",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-27T15:09:58.478-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/security-standards-group-4/global/firewalls/l7-ilb-subnet-allow-ssh-from-management",
            "log_config": [],
            "name": "l7-ilb-subnet-allow-ssh-from-management",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/l7-ilb-network",
            "priority": 1000,
            "project": "security-standards-group-4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/firewalls/l7-ilb-subnet-allow-ssh-from-management",
            "source_ranges": [
              "10.0.3.2"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.management_instance",
            "google_compute_network.default",
            "google_compute_network.management_vpc",
            "google_compute_subnetwork.management_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "backends",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-27T15:09:19.505-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/security-standards-group-4/global/firewalls/l7-ilb-fw-allow-ilb-to-backends",
            "log_config": [],
            "name": "l7-ilb-fw-allow-ilb-to-backends",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/l7-ilb-network",
            "priority": 1000,
            "project": "security-standards-group-4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/firewalls/l7-ilb-fw-allow-ilb-to-backends",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-27T15:09:20.468-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/security-standards-group-4/global/firewalls/l7-ilb-fw-allow-hc",
            "log_config": [],
            "name": "l7-ilb-fw-allow-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/l7-ilb-network",
            "priority": 1000,
            "project": "security-standards-group-4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/firewalls/l7-ilb-fw-allow-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16",
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "dmz_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-27T15:09:43.451-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/security-standards-group-4/global/firewalls/dmz-allow-ssh",
            "log_config": [],
            "name": "dmz-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/dmz-vpc",
            "priority": 1000,
            "project": "security-standards-group-4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/firewalls/dmz-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.dmz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "frontend_allow_health_checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-27T15:09:22.227-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/security-standards-group-4/global/firewalls/frontend-allow-health-checks",
            "log_config": [],
            "name": "frontend-allow-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/l7-ilb-network",
            "priority": 1000,
            "project": "security-standards-group-4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/firewalls/frontend-allow-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "frontend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "frontend_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-27T15:09:23.971-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/security-standards-group-4/global/firewalls/frontend-allow-http",
            "log_config": [],
            "name": "frontend-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/l7-ilb-network",
            "priority": 1000,
            "project": "security-standards-group-4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/firewalls/frontend-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "frontend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "l7_ilb_subnet_allow_egress_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-11-27T15:09:21.568-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/security-standards-group-4/global/firewalls/l7-ilb-subnet-allow-egress-http-https",
            "log_config": [],
            "name": "l7-ilb-subnet-allow-egress-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/l7-ilb-network",
            "priority": 1000,
            "project": "security-standards-group-4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/firewalls/l7-ilb-subnet-allow-egress-http-https",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "l7_ilb_subnet_allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-27T15:09:24.450-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/security-standards-group-4/global/firewalls/l7-ilb-subnet-allow-http-https",
            "log_config": [],
            "name": "l7-ilb-subnet-allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/l7-ilb-network",
            "priority": 1000,
            "project": "security-standards-group-4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/firewalls/l7-ilb-subnet-allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "management_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-27T15:09:03.341-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/security-standards-group-4/global/firewalls/management-allow-ssh",
            "log_config": [],
            "name": "management-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/management-vpc",
            "priority": 1000,
            "project": "security-standards-group-4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/firewalls/management-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-11-27T15:11:08.648-08:00",
            "forwarding_rule_id": 6538560138971322851,
            "id": "projects/security-standards-group-4/regions/us-west1/forwardingRules/l7-ilb-forwarding-rule",
            "ip_address": "10.0.1.5",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "l7-ilb-forwarding-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/l7-ilb-network",
            "network_tier": "PREMIUM",
            "port_range": "443-443",
            "project": "security-standards-group-4",
            "recreate_closed_psc": false,
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/forwardingRules/l7-ilb-forwarding-rule",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/subnetworks/l7-ilb-subnet",
            "target": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/targetHttpsProxies/l7-ilb-target-https-proxy"
          },
          "dependencies": [
            "google_compute_address.default",
            "google_compute_instance_template.default",
            "google_compute_network.default",
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.default",
            "google_compute_region_ssl_certificate.default",
            "google_compute_region_target_https_proxy.default",
            "google_compute_region_url_map.https_lb",
            "google_compute_subnetwork.default",
            "google_compute_subnetwork.proxy_subnet",
            "tls_private_key.default",
            "tls_self_signed_cert.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "frontend_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-11-27T15:11:24.602-08:00",
            "forwarding_rule_id": 2834908860654426611,
            "id": "projects/security-standards-group-4/regions/us-west1/forwardingRules/frontend-forwarding-rule",
            "ip_address": "35.199.188.152",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "frontend-forwarding-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/l7-ilb-network",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "security-standards-group-4",
            "recreate_closed_psc": false,
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/forwardingRules/frontend-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/targetHttpProxies/frontend-http-proxy"
          },
          "dependencies": [
            "google_compute_address.frontend_lb_ip",
            "google_compute_instance_template.frontend_template",
            "google_compute_network.default",
            "google_compute_region_backend_service.frontend_backend_service",
            "google_compute_region_health_check.frontend_health_check",
            "google_compute_region_instance_group_manager.frontend_mig",
            "google_compute_region_target_http_proxy.frontend_http_proxy",
            "google_compute_region_url_map.frontend_url_map",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "main_private_service_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.245.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-11-27T15:09:30.849-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/security-standards-group-4/global/addresses/main-private-service-access",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "main-private-service-access",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/l7-ilb-network",
            "prefix_length": 16,
            "project": "security-standards-group-4",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/addresses/main-private-service-access",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_service_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.172.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-11-27T15:08:55.203-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/security-standards-group-4/global/addresses/private-service-access",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "private-service-access",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/management-vpc",
            "prefix_length": 16,
            "project": "security-standards-group-4",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/addresses/private-service-access",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "dependencies": [
            "google_compute_network.management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dmz_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241112",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/zones/us-west1-c/disks/dmz-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-11-27T15:10:09.119-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/security-standards-group-4/zones/us-west1-c/instances/dmz-instance",
            "instance_id": "2516483764900206655",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "magister:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCs5nwVcl6NLyPbwkof5xk26vAemf2K8JzazkRY3ghvf5Ml3fp1qkcz2ePqhnJD/i228iqw2n1BTI0VqWVki5SQOD9ceCD//m9CtcSk3/SascAyStO67iRCVJUDhkDLva0lri0Vw6ir7b576xKWTvAyCMC9ulrMctGkQiMLSOgJ9WwFd8b24k0Eng2rScDoE7lXU3vFtwh/Xi4nnVsW7XB0YxCw4xzDi6EQVJ9An6MAYYaHZB0qSP2w8azqbkr/pV8hhk9+qYjy89YiMjdJIs3kR7RMdljgviAD83vCu8VAZrJPIQH1cs7oXvfTi+Wvp+CflhSlUQxffifyRyF6VPnwgpEoxXNgrHQkYLpwwja1bKgXccyKU+5yulMvC9G3r3dtUhWxASdW1ok3XTsIfVcSFjyBSzBhUF9jpc1gY0vj [...]
            },
            "metadata_fingerprint": "GUCJBRKTluI=",
            "metadata_startup_script": "#!/bin/bash\ncurl -sSO https://dl.google.com/cloudagents/add-google-cloud-ops-agent-repo.sh\nsudo bash add-google-cloud-ops-agent-repo.sh --also-install\nsudo apt-get update\nsudo apt-get install -y python3-pip\n\n",
            "name": "dmz-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.19.105.38",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/dmz-vpc",
                "network_ip": "10.0.5.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/subnetworks/dmz-subnet",
                "subnetwork_project": "security-standards-group-4"
              }
            ],
            "project": "security-standards-group-4",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/zones/us-west1-c/instances/dmz-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-west1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.dmz_vpc",
            "google_compute_subnetwork.dmz_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "management_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241112",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/zones/us-west1-c/disks/management-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-11-27T15:09:37.603-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/security-standards-group-4/zones/us-west1-c/instances/management-instance",
            "instance_id": "8013648733883996254",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "magister:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCs5nwVcl6NLyPbwkof5xk26vAemf2K8JzazkRY3ghvf5Ml3fp1qkcz2ePqhnJD/i228iqw2n1BTI0VqWVki5SQOD9ceCD//m9CtcSk3/SascAyStO67iRCVJUDhkDLva0lri0Vw6ir7b576xKWTvAyCMC9ulrMctGkQiMLSOgJ9WwFd8b24k0Eng2rScDoE7lXU3vFtwh/Xi4nnVsW7XB0YxCw4xzDi6EQVJ9An6MAYYaHZB0qSP2w8azqbkr/pV8hhk9+qYjy89YiMjdJIs3kR7RMdljgviAD83vCu8VAZrJPIQH1cs7oXvfTi+Wvp+CflhSlUQxffifyRyF6VPnwgpEoxXNgrHQkYLpwwja1bKgXccyKU+5yulMvC9G3r3dtUhWxASdW1ok3XTsIfVcSFjyBSzBhUF9jpc1gY0vj [...]
            },
            "metadata_fingerprint": "kBjlwVopLZc=",
            "metadata_startup_script": "#!/bin/bash\ncurl -sSO https://dl.google.com/cloudagents/add-google-cloud-ops-agent-repo.sh\nsudo bash add-google-cloud-ops-agent-repo.sh --also-install\nsudo apt-get update\nsudo apt-get install -y python3-pip\necho '-----BEGIN OPENSSH PRIVATE KEY-----\nb3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAACFwAAAAdzc2gtcn\nNhAAAAAwEAAQAAAgEArOZ8FXJejS8j28JKH+cZNurwHpn9ivCc2s5EWN4Ib3+TJd36dapH\nM9nj6oZyQ/4ttvIqsNp9QUyNFallZIuUkDg/XHgg//5vQrXEpN/0mrHAMkrTu [...]
            "name": "management-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.169.57.229",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/management-vpc",
                "network_ip": "10.0.3.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/subnetworks/management-subnet",
                "subnetwork_project": "security-standards-group-4"
              }
            ],
            "project": "security-standards-group-4",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/zones/us-west1-c/instances/management-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-west1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.management_vpc",
            "google_compute_subnetwork.management_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "cluster_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": true,
            "id": "projects/security-standards-group-4/global/networks/cluster-network",
            "internal_ipv6_range": "fd20:261:531c:0:0:0:0:0/48",
            "mtu": 0,
            "name": "cluster-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4367598357190320825",
            "project": "security-standards-group-4",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/cluster-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/security-standards-group-4/global/networks/l7-ilb-network",
            "mtu": 0,
            "name": "l7-ilb-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5332423560070305896",
            "project": "security-standards-group-4",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/l7-ilb-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "dmz_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/security-standards-group-4/global/networks/dmz-vpc",
            "mtu": 0,
            "name": "dmz-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8000190986437924961",
            "project": "security-standards-group-4",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/dmz-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "management_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/security-standards-group-4/global/networks/management-vpc",
            "mtu": 0,
            "name": "management-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "784684270330884438",
            "project": "security-standards-group-4",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/management-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/instanceGroups/l7-ilb-mig1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-11-27T15:10:23.363-08:00",
            "enable_cdn": false,
            "fingerprint": "76zfz1GjEGw=",
            "generated_id": 7729778900588959792,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/healthChecks/l7-ilb-hc"
            ],
            "id": "projects/security-standards-group-4/regions/us-west1/backendServices/l7-ilb-backend-service",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "l7-ilb-backend-service",
            "port_name": "http-server",
            "project": "security-standards-group-4",
            "protocol": "HTTP",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/backendServices/l7-ilb-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_instance_template.default",
            "google_compute_network.default",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "frontend_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/instanceGroups/frontend-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-11-27T15:10:29.825-08:00",
            "enable_cdn": false,
            "fingerprint": "XggobwgEJDY=",
            "generated_id": 4676797545365248010,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/healthChecks/frontend-hc"
            ],
            "id": "projects/security-standards-group-4/regions/us-west1/backendServices/frontend-backend-service",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "frontend-backend-service",
            "port_name": "http-server",
            "project": "security-standards-group-4",
            "protocol": "HTTP",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/backendServices/frontend-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_instance_template.frontend_template",
            "google_compute_network.default",
            "google_compute_region_health_check.frontend_health_check",
            "google_compute_region_instance_group_manager.frontend_mig",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "frontend_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-27T15:11:01.363-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/backendServices/frontend-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "6y55uB6V2ok=",
            "host_rule": [],
            "id": "projects/security-standards-group-4/regions/us-west1/urlMaps/frontend-url-map",
            "map_id": 4490687154911582698,
            "name": "frontend-url-map",
            "path_matcher": [],
            "project": "security-standards-group-4",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/urlMaps/frontend-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance_template.frontend_template",
            "google_compute_network.default",
            "google_compute_region_backend_service.frontend_backend_service",
            "google_compute_region_health_check.frontend_health_check",
            "google_compute_region_instance_group_manager.frontend_mig",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "https_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-27T15:10:45.153-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/backendServices/l7-ilb-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "pkpfrqZFsN4=",
            "host_rule": [],
            "id": "projects/security-standards-group-4/regions/us-west1/urlMaps/l7-ilb-regional-url-map",
            "map_id": 8925693281231837210,
            "name": "l7-ilb-regional-url-map",
            "path_matcher": [],
            "project": "security-standards-group-4",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/urlMaps/l7-ilb-regional-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance_template.default",
            "google_compute_network.default",
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-27T15:09:31.488-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/security-standards-group-4/regions/us-west1/routers/l7-ilb-router",
            "name": "l7-ilb-router",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/l7-ilb-network",
            "project": "security-standards-group-4",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/routers/l7-ilb-router"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-27T15:09:43.055-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/security-standards-group-4/regions/us-west1/routers/dmz-router",
            "name": "dmz-router",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/dmz-vpc",
            "project": "security-standards-group-4",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/routers/dmz-router"
          },
          "dependencies": [
            "google_compute_network.dmz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "security-standards-group-4/us-west1/dmz-router/nat-dmz",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-dmz",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "security-standards-group-4",
            "region": "us-west1",
            "router": "dmz-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.dmz_vpc",
            "google_compute_router.dmz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "cluster_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-27T15:09:08.931-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/security-standards-group-4/regions/us-west1/subnetworks/cluster-subnetwork",
            "internal_ipv6_prefix": "fd20:261:531c:2001:0:0:0:0/64",
            "ip_cidr_range": "10.10.0.0/16",
            "ipv6_access_type": "INTERNAL",
            "name": "cluster-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/cluster-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "security-standards-group-4",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.0.0/24",
                "range_name": "services-range"
              },
              {
                "ip_cidr_range": "192.168.1.0/24",
                "range_name": "pod-ranges"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/subnetworks/cluster-subnetwork",
            "stack_type": "IPV4_IPV6"
          },
          "dependencies": [
            "google_compute_network.cluster_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-27T15:09:33.041-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/security-standards-group-4/regions/us-west1/subnetworks/l7-ilb-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "l7-ilb-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/l7-ilb-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "security-standards-group-4",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/subnetworks/l7-ilb-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "dmz_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-27T15:09:45.252-08:00",
            "gateway_address": "10.0.5.1",
            "id": "projects/security-standards-group-4/regions/us-west1/subnetworks/dmz-subnet",
            "ip_cidr_range": "10.0.5.0/24",
            "name": "dmz-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/dmz-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "security-standards-group-4",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/subnetworks/dmz-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.dmz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "management_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-27T15:08:57.438-08:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/security-standards-group-4/regions/us-west1/subnetworks/management-subnet",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "management-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/management-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "security-standards-group-4",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/subnetworks/management-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-27T15:09:36.525-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/security-standards-group-4/regions/us-west1/subnetworks/l7-ilb-proxy-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "l7-ilb-proxy-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/global/networks/l7-ilb-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "security-standards-group-4",
            "purpose": "REGIONAL_MANAGED_PROXY",
            "region": "us-west1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/security-standards-group-4/regions/us-west1/subnetworks/l7-ilb-proxy-subnet"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    }
  ]
}